2008-01-12  Sam Steingold  <sds@gnu.org>

	* xthread.d: disable spin locks (gcc barfs)
	* constsym.d, subr.d, subrkw.d, threads.lisp, zthread.d:
	rename thread functions from PROCESS to THREAD

2008-01-10  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (frame-up-down): add
	(print-backtrace, break-loop, step-hook-fn): use it
	(*frame-limit1*): rename to *frame-limit-down*
	(frame-limit1): rename to frame-limit-down
	(*frame-limit2*): rename to *frame-limit-up*
	(frame-limit2): rename to frame-limit-up
	* debug.d (test_framepointer_arg): report a TYPE-ERROR
	(climb_stack_once, climb_stack_repeat): add
	(FRAME-UP-1, FRAME-DOWN-1): use climb_stack_once
	(FRAME-UP, FRAME-DOWN): use climb_stack_repeat

2008-01-09  Sam Steingold  <sds@gnu.org>

	* eval.d (reset): replace NOTREACHED with abort

2008-01-09  Sam Steingold  <sds@gnu.org>

	* debug.d (print_back_trace): index is uintL, not int
	(print_bt_to_frame): add
	(DESCRIBE-FRAME, show_stack): use it

2008-01-07  Sam Steingold  <sds@gnu.org>

	* eval.d (interpret_bytecode_): translated labels:
	svref_kein_svector --> svref_not_a_svector
	svref_kein_index --> svref_not_an_index
	* init.lisp (load): translated label: weiter --> proceed
	* condition.lisp (check-type-failed, assert-failed)
	(simple-assert-failed, eval-loaded-form, ctypecase-failed):
	format RESTART-CASE clauses in a more traditional way (lalist
	first)
	* spvw_garcol.d (gc_unmarkcheck): better error reporting
	* spvw.d (init_memory) [DEBUG_SPVW]: print STACK bounds too

2008-01-07  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1448744 ]: :q debugger command does not reset program stack
	* eval.d (reset): save last driver frame and use it instead of
	starting a new driver when the STACK is exhausted

2008-01-06  Sam Steingold  <sds@gnu.org>

	* reploop.lisp (break-loop): remove #\. from the end of a message
	(safe-wr-st): new function, use instead of WRITE-STRING whenever
	it is used with TEXT in this file to