@@ -2,7 +2,7 @@
  * Input/Output for CLISP
  * Bruno Haible 1990-2005
  * Marcus Daniels 11.3.1997
- * Sam Steingold 1998-2007
+ * Sam Steingold 1998-2008
  * German comments translated into English: Stefan Kain 2001-06-12
  */
 
@@ -9475,6 +9475,23 @@ local maygc void pr_orecord (const gcv_object_t* stream_, object obj) {
       CHECK_PRINT_READABLY(obj);
       write_sstring_case(stream_,O(printstring_internal_weak_hashed_alist));
       break;
+#ifdef MULTITHREAD
+    case Rectype_Thread:
+      CHECK_PRINT_READABLY(obj);
+      pr_unreadably(stream_,TheThread(obj)->xth_name,
+                    &O(printstring_thread),prin_object);
+      break;
+    case Rectype_Mutex:
+      CHECK_PRINT_READABLY(obj);
+      pr_unreadably(stream_,TheMutex(obj)->xmu_name,
+                    &O(printstring_mutex),prin_object);
+      break;
+    case Rectype_Exemption:
+      CHECK_PRINT_READABLY(obj);
+      pr_unreadably(stream_,TheExemption(obj)->xco_name,
+                    &O(printstring_exemption),prin_object);
+      break;
+#endif
     default:
       pushSTACK(S(print));
       error(serious_condition,
